syntax = "proto3";

package keyauth.policy;
option go_package = "github.com/infraboard/keyauth/pkg/policy";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "pkg/user/pb/types.proto";
import "pkg/role/pb/role.proto";
import "pkg/namespace/pb/namespace.proto";
import "pkg/policy/pb/enum.proto";


// Policy 权限策略
message Policy {
    // 策略ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 创建时间
    int64 create_at = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
        ];
    // 更新时间
    int64 update_at = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
        ];
    // 策略所属域
    string domain = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
        ];
    // 创建者ID
    string creater = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
        ];
    // 用户类型
    user.UserType user_type = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_type" json:"user_type"'}
        ];
    // 范围
    string namespace_id = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"namespace_id" json:"namespace_id"'}
        ];
    // 用户
    string account = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"account" json:"account"'}
        ];
    // 角色名称
    string role_id = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"role_id" json:"role_id"'}
        ];
    // 范围控制
    string scope = 10[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"scope" json:"scope"'}
        ];
    // 策略过期时间
    int64 expired_time = 11[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"expired_time" json:"expired_time"'}
        ];
    // 策略的类型
    PolicyType type = 12[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];  
    // 关联的角色对象    
    role.Role role = 13[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"role,omitempty"'}
        ];
    // 关联的空间信息
    namespace.Namespace namespace = 14[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"namespace,omitempty"'}
        ];
}

message Set {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Policy items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}